--- a/src/components/pages/ContactMe.css
+++ b/src/components/pages/ContactMe.css
@@ -1,3 +1,13 @@
+.resumeContainer{
+  margin-top: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-size: large;
+}
+
+
+
 .field{
     display: flex;
     justify-content: center;
