--- a/src/components/pages/AboutMe.css
+++ b/src/components/pages/AboutMe.css
@@ -8,7 +8,8 @@ body{
 .aboutMe{
     display: flex;
     flex-direction: column;
-    align-items: center;
+	align-items: center;
+	padding-top: 20px;
 }
 
 .gridWrapper{
