--- a/src/components/HeroSection.css
+++ b/src/components/HeroSection.css
@@ -55,8 +55,8 @@ a:link {
   margin: 6px;
 }
 
-.fa-play-circle {
-  margin-left: 4px;
+.fa-project-diagram{
+  margin-left: 5px;
 }
 
 @media screen and (max-width: 960px) {
