--- a/src/components/pages/ContactMe.css
+++ b/src/components/pages/ContactMe.css
@@ -6,52 +6,60 @@
   font-size: large;
 }
 
-.field{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-label{
-    padding-right: 20px;
-}
 
 input[type=text], select, textarea {
     width: 70%;
     padding: 12px; 
     border: 1px solid #ccc; 
     border-radius: 4px; 
-    box-sizing: border-box; 
     margin-top: 6px; 
     margin-bottom: 16px; 
     resize: vertical 
   }
 
   input[type=submit] {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #4CAF50;
+    
+  background-color: black;
     color: white;
     padding: 12px 20px;
-    margin: auto;
     border: none;
     border-radius: 4px;
     cursor: pointer;
   }
 
   input[type=submit]:hover {
-    background-color: #45a049;
+    background-color: #2c2c2c;
   }
 
   .contactContainer {
     border-radius: 5px;
     border: solid 1px black;
     padding: 20px;
-    width: 70%;
+    width: 60%;
     margin: auto;
     margin-top: 20px;
     margin-bottom: 50px;
+  }
+
+  #contactForm{
+    display: grid;
+    grid-template-columns: 2fr 4fr;
+    grid-gap: 16px;
+  }
+  label{
+    grid-column:  1/2;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  input, button{
+    grid-column: 2/3;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-right: 50px;
+    width: 70%;
   }
 
   @media screen and (max-width: 768px) {
