Updated about me

--- a/src/components/pages/AboutMe.css
+++ b/src/components/pages/AboutMe.css
@@ -4,12 +4,18 @@ body{
 	margin: 0;
 	scroll-behavior: smooth;
 }
+.gridContainer{
+	display:grid;
+	row-gap:2vh;
+	padding-bottom:20px;
+}
 
 .aboutMe{
     display: flex;
     flex-direction: column;
 	align-items: center;
 	padding-top: 20px;
+	padding-bottom: 20px;
 }
 
 .gridWrapper{
@@ -18,7 +24,21 @@ body{
     padding-top: 50px;
     width: 50%;
     margin: auto;
-    border-bottom: 2px black solid;
+    border: 3px solid #333333;
+    border-radius: 2% 6% 5% 4% / 1% 1% 2% 4%;
+    position: relative;
+}
+.gridWrapper::before {
+        content: '';
+        border: 2px solid #353535;
+        display: block;
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate3d(-50%, -50%, 0) scale(1.015) rotate(0.5deg);
+        border-radius: 1% 1% 2% 4% / 2% 6% 5% 4%;
 }
 
 .subtitle{
