--- a/src/components/Cards.css
+++ b/src/components/Cards.css
@@ -18,7 +18,9 @@ h1 {
 
 .cardsWrapper {
   display:grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  width: 100%;
+  justify-content: center;
 }
 
 .cardsItems {
