--- a/src/components/Dropdown.css
+++ b/src/components/Dropdown.css
@@ -4,6 +4,9 @@
     position: relative;
     margin-bottom: 30px;
     width: 300px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .dropdown .arrow {
