--- a/src/components/Cards.css
+++ b/src/components/Cards.css
@@ -111,6 +111,28 @@ h1 {
   background-color: black;
 }
 
+button {
+  background-color:rgb(131, 170, 185);
+  font-weight: bold;
+  text-transform: uppercase;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin:auto;
+  margin-bottom: 5px;
+  border-radius: 8px;
+  text-align: center;
+  text-decoration: none;
+  padding: 10px;
+}
+
+.filters{
+  display: flex;
+  width: 60%;
+  margin: auto;
+
+}
+
 @media only screen and (min-width: 1024px) {
   .cardsItems {
     display: flex;
@@ -120,5 +142,12 @@ h1 {
 @media only screen and (max-width: 1024px) {
   .cardsItem {
     margin-bottom: 2rem;
+  }
+}
+
+@media only screen and (max-width: 780px){
+  .filters {
+    flex-direction: column;
+    width: 100%;
   }
 }
