--- a/src/components/Button.css
+++ b/src/components/Button.css
@@ -24,6 +24,12 @@
   transition: all 0.3s ease-out;
 }
 
+.buttonBlack{
+  border: 1px solid var(--primary);
+  background-color: black;
+  color:white;
+}
+
 .buttonMedium {
   padding: 8px 20px;
   font-size: 18px;
