--- a/src/components/HeroSection.css
+++ b/src/components/HeroSection.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Amatic+SC&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap');
+
 video {
   object-fit: cover;
   width: 100%;
@@ -6,12 +9,15 @@ video {
   z-index: -1;
 }
 
+Button{
+  font-family: 'Permanent Marker', cursive;
+}
+
 a:link {
   text-decoration: none;
 }
 
 .heroContainer {
-  /* background: url('/images/img-home.jpg') center center/cover no-repeat; */
   height: 55vh;
   padding-top: 5em;
   width: 100%;
@@ -32,16 +38,19 @@ a:link {
 
 .infoContainer > h1 {
   color: #fff;
-  font-size: 100px;
+  font-size: 120px;
+  margin: 0 !important;
+  font-family: 'Amatic SC', cursive;
+  letter-spacing: 2px;
 }
 
 .infoContainer > p {
   margin-top: 8px;
   color: #fff;
   font-size: 32px;
-  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
-    'Lucida Sans', Arial, sans-serif;
-    display: flex;
+  font-family: 'Amatic SC', cursive;
+  letter-spacing: 2px;
+  display: flex;
   justify-content: center;
 }
 
@@ -51,6 +60,7 @@ a:link {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  margin-bottom: 40px;
 }
 
 .infoButtons .button {
@@ -98,5 +108,11 @@ a:link {
 
   .button {
     width: 100%;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .infoButtons{
+    margin-top: 0; 
   }
 }
