--- a/src/components/Cards.css
+++ b/src/components/Cards.css
@@ -29,6 +29,7 @@ h1 {
 .cardsWrapper {
   display:grid;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  gap: 10px;
   width: 100%;
   justify-content: center;
 }
@@ -44,6 +45,7 @@ h1 {
   border-radius: 10px;
 }
 
+
 .cardsItemLink {
   display: flex;
   flex-flow: column;
@@ -54,6 +56,12 @@ h1 {
   border-radius: 10px;
   overflow: hidden;
   text-decoration: none;
+  color: #252e48;
+}
+
+.cardsItemLink::visited{
+  text-decoration: none;
+  color: #252e48;
 }
 
 .cardsItemPicWrap {
