--- a/src/components/Cards.css
+++ b/src/components/Cards.css
@@ -45,6 +45,10 @@ h1 {
   border-radius: 10px;
 }
 
+.cardsItem__date{
+  color:#252e48;
+
+}
 
 .cardsItemLink {
   display: flex;
@@ -56,7 +60,6 @@ h1 {
   border-radius: 10px;
   overflow: hidden;
   text-decoration: none;
-  color: #252e48;
 }
 
 .cardsItemLink::visited{
